# aim

./: .gitignore  README.md  pyproject.toml
installers/windows/: README.md  install.ps1
packaging/windows/: build_installer.py  rapid-shot-overlay.iss
src/aim/: __init__.py  __main__.py  cli.py
src/heat_overlay/: __init__.py  app.py  calibration.py  config.py  overlay.py  providers.py
tests/: test_cli.py
