[project]
name = "heat-overlay"
version = "0.1.0"
description = "Rapid Shot heat overlay for Path of Exile 2"
authors = [{name = "AIM"}]
requires-python = ">=3.9"
dependencies = [
  "PySide6>=6.6",
  "opencv-python>=4.8",
  "dxcam>=0.0.4",
  "pytesseract>=0.3.10",
  "numpy>=1.24",
  "mss>=9.0",
]

[project.scripts]
heat-overlay = "heat_overlay.app:main"

[build-system]
requires = ["setuptools>=63", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pyinstaller]
# Placeholder for PyInstaller configuration guidance.
